--- a/res/github-markdown.css
+++ b/res/github-markdown.css
@@ -58,6 +58,16 @@ body {
   font-size: 16px;
   line-height: 1.5;
   word-wrap: break-word;
+  margin: auto;
+  margin-top: 32px;
+  margin-bottom: 32px;
+  padding: 32px;
+  width: 896px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #dfe2e5;
+  border-radius: 6px;
+  box-shadow: none;
 }
 
 .pl-c {
